2009-11-23  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT: dumpBackForwardList() does not work properly with non-file URLs.
        https://bugs.webkit.org/show_bug.cgi?id=31775

        LayoutTestController::dumpBackForwardList() should work with local URLs
        as well as with normal URLs (in http tests for instance).
        Currently it does not output the latter properly.

        Unskip a bunch of passing http/navigation tests.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::dumpHistoryItem):

2009-11-22  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Oliver Hunt.

        ARIA: support aria-flowto
        https://bugs.webkit.org/show_bug.cgi?id=31762

        * DumpRenderTree/AccessibilityUIElement.cpp:
        (ariaFlowToElementAtIndexCallback):
        (AccessibilityUIElement::getJSClass):
        * DumpRenderTree/AccessibilityUIElement.h:
        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::ariaFlowToElementAtIndex):
        * DumpRenderTree/mac/AccessibilityUIElementMac.mm:
        (AccessibilityUIElement::ariaFlowToElementAtIndex):
        * DumpRenderTree/win/AccessibilityUIElementWin.cpp:
        (AccessibilityUIElement::ariaFlowToElementAtIndex):

2009-11-22  Antonio Gomes  <tonikitoo@webkit.org>

        Reviewed by Kenneth Christiansen.

        [Qt] fast/history/back-forward-reset-after-error-handling.html failing due to WorkQueue not being un-frozen
        https://bugs.webkit.org/show_bug.cgi?id=31638

        Unfreeze WorkQueue after each test execution.

        * DumpRenderTree/qt/DumpRenderTree.cpp:
        (WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):

2009-11-22  Jakub Wieczorek  <faw217@gmail.com>

        Reviewed by Adam Barth.

        [Qt] DumpRenderTree should explicitly ignore any SSL certificate errors
        for localhost and 127.0.0.1.